* Fixed: An issue with publishing sticky posts * Fixed: An issue with clearing date-picker values on mobile devices * Fixed: An issue with toggling the sites list section in the Connection Status widget * Fixed: An issue with running scheduled events on specific setups * Fixed: An issue with rendering UI elements on mobile devices * Fixed: Last Purge Cache format to reflect WP settings * Added: Responsive DataTables extension * Added: The responsive attribute to the majority of tables in MainWP Dashboard * Updated: Replaced Semantic UI framework with Fomantic UI * Updated: The Server Information page layout and style * Updated: Width of the button elements on mobile devices * Updated: Width of the label elements on mobile devices * Updated: Tables `white-space` property on mobile devices * Updated: Tested up to tag to WP 6.0 * Removed: Calendar library

--- a/assets/css/mainwp-fomantic.css
+++ b/assets/css/mainwp-fomantic.css
@@ -142,7 +142,18 @@
 .mainwp-ui .ui.multiple.dropdown > .label {
   vertical-align: baseline;
 }
+
 .mainwp-ui .mainwp-main-content .ui.checkbox:not( .slider ) .box::after,
 .mainwp-ui .mainwp-main-content .ui.checkbox:not( .slider ) label::after,
 .mainwp-ui  #mainwp-manage-sites-content .ui.checkbox:not( .slider ) .box::after,
 .mainwp-ui  #mainwp-manage-sites-content .ui.checkbox:not( .slider ) label::after { top: 1px; left: 1px; }
+
+mainwp-sub-header
+
+
+.mainwp-ui .mainwp-actions-bar .ui.mini.form .ui.dropdown,
+.mainwp-ui .mainwp-actions-bar.ui.mini.form .ui.dropdown,
+.mainwp-ui .mainwp-sub-header .ui.mini.form .ui.dropdown,
+.mainwp-ui .mainwp-sub-header.ui.mini.form .ui.dropdown {
+  font-size: 0.78571429rem !important;
+}
