--- a/assets/css/mainwp.css
+++ b/assets/css/mainwp.css
@@ -153,7 +153,7 @@
     position: fixed;
     left: 0;
     top: 0;
-    bottom: -120px;
+    bottom: 0;
     z-index: 9999 !important;
 }
 
@@ -175,6 +175,15 @@
     width: 200px;
     position: fixed !important;
     bottom: 0;
+    z-index: 9999;
+    background-color: #1c1d1b !important;
+    box-shadow: inset 0 0 0 10em rgba(255, 255, 255, 0.15);
+}
+
+#mainwp-main-menu {
+    max-height: 85vh;
+    overflow-y: scroll;
+    z-index: 9999 !important;
 }
 
 #mainwp-main-menu #menu-item-extensions .content.menu {
