--- a/assets/css/mainwp-fomantic.css
+++ b/assets/css/mainwp-fomantic.css
@@ -144,13 +144,10 @@
   vertical-align: baseline;
 }
 
-.mainwp-ui .mainwp-main-content .ui.checkbox:not( .slider ) .box::after,
-.mainwp-ui .mainwp-main-content .ui.checkbox:not( .slider ) label::after,
-.mainwp-ui  #mainwp-manage-sites-content .ui.checkbox:not( .slider ) .box::after,
-.mainwp-ui  #mainwp-manage-sites-content .ui.checkbox:not( .slider ) label::after { top: 1px; left: 1px; }
-
-mainwp-sub-header
-
+.mainwp-ui .mainwp-main-content .ui.checkbox:not( .slider, .toggle ) .box::after,
+.mainwp-ui .mainwp-main-content .ui.checkbox:not( .slider, .toggle ) label::after,
+.mainwp-ui  #mainwp-manage-sites-content .ui.checkbox:not( .slider, .toggle ) .box::after,
+.mainwp-ui  #mainwp-manage-sites-content .ui.checkbox:not( .slider, .toggle ) label::after { top: 1px; left: 1px; }
 
 .mainwp-ui .mainwp-actions-bar .ui.mini.form .ui.dropdown,
 .mainwp-ui .mainwp-actions-bar.ui.mini.form .ui.dropdown,
