Fixed: updates info after update some premiums plugin for some case Fixed: warnings Tweaked: support html in post title Added: option ssl version into the add new site screen to support test connection and adding site. Added: support saving the suspended field for rest-api Added: support disable update core for FlyWheel and Pressable hosts

--- a/assets/css/mainwp.css
+++ b/assets/css/mainwp.css
@@ -1131,3 +1131,10 @@ th .sort.icon,
 #mainwp-themes-content td.child-active {
     background: #e3ffa7 !important;
 }
+
+.mainwp-ui #wpbody-content .notice.notice-success,
+.mainwp-ui #wpbody-content .notice.notice-info,
+.mainwp-ui #wpbody-content .notice.notice-error,
+.mainwp-ui #wpbody-content .notice.notice-warrning {
+    margin-left: 190px !important;
+}
