Fixed: issue for set auto update mainwp-child plugin Fixed: response result for CLI add site command Upadated: new version of fomantic ui Added: connect time info for sites Added: create tag in sites selection box

--- a/assets/css/mainwp-fomantic.css
+++ b/assets/css/mainwp-fomantic.css
@@ -160,3 +160,7 @@
 .mainwp-ui .ui.selection.active.dropdown {
   z-index: 9999 !important;
 }
+
+.mainwp-ui i.plug.circular.icon {
+  height: auto !important;
+}
